version/0.8/_sources/API/_autosummary/pyaedt.maxwell.Maxwell2d.rst.txt
Maxwell2d
=========

.. currentmodule:: pyaedt.maxwell

.. autoclass:: Maxwell2d

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      Maxwell2d.activate_variable_optimization
      
      
      Maxwell2d.activate_variable_sensitivity
      
      
      Maxwell2d.activate_variable_statistical
      
      
      Maxwell2d.activate_variable_tuning
      
      
      Maxwell2d.add_error_message
      
      
      Maxwell2d.add_from_toolkit
      
      
      Maxwell2d.add_info_message
      
      
      Maxwell2d.add_stackup_3d
      
      
      Maxwell2d.add_warning_message
      
      
      Maxwell2d.add_winding_coils
      
      
      Maxwell2d.analyze
      
      
      Maxwell2d.analyze_from_zero
      
      
      Maxwell2d.analyze_setup
      
      
      Maxwell2d.apply_skew
      
      
      Maxwell2d.archive_project
      
      
      Maxwell2d.assign_balloon
      
      
      Maxwell2d.assign_coil
      
      
      Maxwell2d.assign_current
      
      
      Maxwell2d.assign_current_density
      
      
      Maxwell2d.assign_end_connection
      
      
      Maxwell2d.assign_force
      
      
      Maxwell2d.assign_master_slave
      
      
      Maxwell2d.assign_material
      
      
      Maxwell2d.assign_matrix
      
      
      Maxwell2d.assign_radiation
      
      
      Maxwell2d.assign_rotate_motion
      
      
      Maxwell2d.assign_symmetry
      
      
      Maxwell2d.assign_torque
      
      
      Maxwell2d.assign_translate_motion
      
      
      Maxwell2d.assign_vector_potential
      
      
      Maxwell2d.assign_voltage
      
      
      Maxwell2d.assign_voltage_drop
      
      
      Maxwell2d.assign_winding
      
      
      Maxwell2d.assignmaterial_from_sherlock_files
      
      
      Maxwell2d.autosave_disable
      
      
      Maxwell2d.autosave_enable
      
      
      Maxwell2d.change_automatically_use_causal_materials
      
      
      Maxwell2d.change_design_settings
      
      
      Maxwell2d.change_inductance_computation
      
      
      Maxwell2d.change_material_override
      
      
      Maxwell2d.change_property
      
      
      Maxwell2d.change_symmetry_multiplier
      
      
      Maxwell2d.change_validation_settings
      
      
      Maxwell2d.check_beta_option_enabled
      
      
      Maxwell2d.check_if_project_is_loaded
      
      
      Maxwell2d.clean_proj_folder
      
      
      Maxwell2d.cleanup_solution
      
      
      Maxwell2d.close_desktop
      
      
      Maxwell2d.close_project
      
      
      Maxwell2d.copy_design_from
      
      
      Maxwell2d.copy_project
      
      
      Maxwell2d.copy_solid_bodies_from
      
      
      Maxwell2d.create_dataset
      
      
      Maxwell2d.create_dataset1d_design
      
      
      Maxwell2d.create_dataset1d_project
      
      
      Maxwell2d.create_dataset3d
      
      
      Maxwell2d.create_new_project
      
      
      Maxwell2d.create_output_variable
      
      
      Maxwell2d.create_setup
      
      
      Maxwell2d.dataset_exists
      
      
      Maxwell2d.deactivate_variable_optimization
      
      
      Maxwell2d.deactivate_variable_sensitivity
      
      
      Maxwell2d.deactivate_variable_statistical
      
      
      Maxwell2d.deactivate_variable_tuning
      
      
      Maxwell2d.delete_design
      
      
      Maxwell2d.delete_project
      
      
      Maxwell2d.delete_separator
      
      
      Maxwell2d.delete_setup
      
      
      Maxwell2d.delete_unused_variables
      
      
      Maxwell2d.delete_variable
      
      
      Maxwell2d.design_settings
      
      
      Maxwell2d.design_variation
      
      
      Maxwell2d.duplicate_design
      
      
      Maxwell2d.eddy_effects_on
      
      
      Maxwell2d.edit_external_circuit
      
      
      Maxwell2d.edit_setup
      
      
      Maxwell2d.enable_harmonic_force
      
      
      Maxwell2d.enable_harmonic_force_on_layout_component
      
      
      Maxwell2d.evaluate_expression
      
      
      Maxwell2d.export_3d_model
      
      
      Maxwell2d.export_convergence
      
      
      Maxwell2d.export_design_preview_to_jpg
      
      
      Maxwell2d.export_element_based_harmonic_force
      
      
      Maxwell2d.export_mesh_stats
      
      
      Maxwell2d.export_parametric_results
      
      
      Maxwell2d.export_profile
      
      
      Maxwell2d.export_results
      
      
      Maxwell2d.export_rl_matrix
      
      
      Maxwell2d.export_variables_to_csv
      
      
      Maxwell2d.flatten_3d_components
      
      
      Maxwell2d.generate_design_data
      
      
      Maxwell2d.generate_temp_project_directory
      
      
      Maxwell2d.generate_unique_setup_name
      
      
      Maxwell2d.get_all_conductors_names
      
      
      Maxwell2d.get_all_dielectrics_names
      
      
      Maxwell2d.get_all_sources
      
      
      Maxwell2d.get_components3d_vars
      
      
      Maxwell2d.get_dxf_layers
      
      
      Maxwell2d.get_evaluated_value
      
      
      Maxwell2d.get_module
      
      
      Maxwell2d.get_monitor_data
      
      
      Maxwell2d.get_nominal_variation
      
      
      Maxwell2d.get_object_material_properties
      
      
      Maxwell2d.get_oo_name
      
      
      Maxwell2d.get_oo_object
      
      
      Maxwell2d.get_oo_properties
      
      
      Maxwell2d.get_oo_property_value
      
      
      Maxwell2d.get_output_variable
      
      
      Maxwell2d.get_property_value
      
      
      Maxwell2d.get_registry_key_int
      
      
      Maxwell2d.get_registry_key_string
      
      
      Maxwell2d.get_setup
      
      
      Maxwell2d.get_setups
      
      
      Maxwell2d.get_sweeps
      
      
      Maxwell2d.get_traces_for_plot
      
      
      Maxwell2d.hidden_variable
      
      
      Maxwell2d.identify_touching_conductors
      
      
      Maxwell2d.import_dataset1d
      
      
      Maxwell2d.import_dataset3d
      
      
      Maxwell2d.import_dxf
      
      
      Maxwell2d.import_gds_3d
      
      
      Maxwell2d.insert_design
      
      
      Maxwell2d.list_of_variations
      
      
      Maxwell2d.load_project
      
      
      Maxwell2d.number_with_units
      
      
      Maxwell2d.plot
      
      
      Maxwell2d.read_design_data
      
      
      Maxwell2d.read_only_variable
      
      
      Maxwell2d.release_desktop
      
      
      Maxwell2d.remove_all_unused_definitions
      
      
      Maxwell2d.rename_design
      
      
      Maxwell2d.save_project
      
      
      Maxwell2d.set_active_design
      
      
      Maxwell2d.set_active_dso_config_name
      
      
      Maxwell2d.set_core_losses
      
      
      Maxwell2d.set_initial_angle
      
      
      Maxwell2d.set_license_type
      
      
      Maxwell2d.set_registry_from_file
      
      
      Maxwell2d.set_registry_key
      
      
      Maxwell2d.set_source_context
      
      
      Maxwell2d.set_temporary_directory
      
      
      Maxwell2d.setup_y_connection
      
      
      Maxwell2d.solve_in_batch
      
      
      Maxwell2d.solve_inside
      
      
      Maxwell2d.stop_simulations
      
      
      Maxwell2d.submit_job
      
      
      Maxwell2d.validate_simple
      
      
      Maxwell2d.value_with_units
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      Maxwell2d.Position
      Maxwell2d.SimulationSetupTypes
      Maxwell2d.SolutionTypes
      Maxwell2d.active_setup
      Maxwell2d.aedt_version_id
      Maxwell2d.are_there_simulations_running
      Maxwell2d.available_variations
      Maxwell2d.boundaries
      Maxwell2d.boundaries_by_type
      Maxwell2d.components3d
      Maxwell2d.configurations
      Maxwell2d.default_solution_type
      Maxwell2d.design_datasets
      Maxwell2d.design_excitations
      Maxwell2d.design_file
      Maxwell2d.design_list
      Maxwell2d.design_name
      Maxwell2d.design_properties
      Maxwell2d.design_type
      Maxwell2d.desktop_class
      Maxwell2d.desktop_install_dir
      Maxwell2d.dim
      Maxwell2d.excitations
      Maxwell2d.excitations_by_type
      Maxwell2d.existing_analysis_setups
      Maxwell2d.existing_analysis_sweeps
      Maxwell2d.geometry_mode
      Maxwell2d.info
      Maxwell2d.layouteditor
      Maxwell2d.library_list
      Maxwell2d.lock_file
      Maxwell2d.logger
      Maxwell2d.materials
      Maxwell2d.mesh
      Maxwell2d.model_depth
      Maxwell2d.modeler
      Maxwell2d.native_components
      Maxwell2d.nominal_adaptive
      Maxwell2d.nominal_sweep
      Maxwell2d.o_component_manager
      Maxwell2d.o_maxwell_parameters
      Maxwell2d.o_model_manager
      Maxwell2d.o_symbol_manager
      Maxwell2d.oanalysis
      Maxwell2d.oboundary
      Maxwell2d.odefinition_manager
      Maxwell2d.odesign
      Maxwell2d.odesktop
      Maxwell2d.oeditor
      Maxwell2d.oexcitation
      Maxwell2d.ofieldsreporter
      Maxwell2d.oimport_export
      Maxwell2d.omaterial_manager
      Maxwell2d.omatrix
      Maxwell2d.omeshmodule
      Maxwell2d.omodelsetup
      Maxwell2d.omonitor
      Maxwell2d.ooptimetrics
      Maxwell2d.ooutput_variable
      Maxwell2d.opadstackmanager
      Maxwell2d.oproject
      Maxwell2d.optimizations
      Maxwell2d.oradfield
      Maxwell2d.oreportsetup
      Maxwell2d.osolution
      Maxwell2d.output_variables
      Maxwell2d.parametrics
      Maxwell2d.personallib
      Maxwell2d.post
      Maxwell2d.project_datasets
      Maxwell2d.project_file
      Maxwell2d.project_list
      Maxwell2d.project_name
      Maxwell2d.project_path
      Maxwell2d.project_properties
      Maxwell2d.project_time_stamp
      Maxwell2d.project_timestamp_changed
      Maxwell2d.pyaedt_dir
      Maxwell2d.results_directory
      Maxwell2d.settings
      Maxwell2d.setup_names
      Maxwell2d.setups
      Maxwell2d.solution_type
      Maxwell2d.src_dir
      Maxwell2d.symmetry_multiplier
      Maxwell2d.syslib
      Maxwell2d.temp_directory
      Maxwell2d.toolkit_directory
      Maxwell2d.userlib
      Maxwell2d.valid_design
      Maxwell2d.variable_manager
      Maxwell2d.windings
      Maxwell2d.working_directory
      Maxwell2d.xy_plane
   
   